--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,17 @@
             <version>2.7.1</version>
         </dependency>
 
+        <!--
+            SQLite dependency for databases.
+            https://bitbucket.org/xerial/sqlite-jdbc.
+        -->
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.30.1</version>
+        </dependency>
 
+        
         <!--https://github.com/atlassian/commonmark-java-->
         <dependency>
             <groupId>com.atlassian.commonmark</groupId>
